feat: add login record api
